Added animation to bubbles

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,12 @@
     border-radius: 100%;
     display: grid;
     place-items: center;
+    text-align: center;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    transition: transform 0.5s;
+}
+
+.bubble-large {
+    transform: scale(1.5);
 }
