--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     text-align: center;
     animation-duration: 0.5s;
     animation-timing-function: linear;
-    transition-property: transform, height, width;
+    transition-property: background, height, width;
     transition-duration: .5s;
     user-select: none;
 }
