--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #121212;
+}
 .bubble{
     background: linear-gradient(90deg, rgba(238,174,202,1), rgba(148,187,233,1) 51%, rgba(238,174,202,1)) var(--x, 0)/ 200%;
     width: 100px;
