--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body{
     transition-property: background, height, width;
     transition-duration: .5s;
     user-select: none;
+    margin: 5px 5px;
 }
 .bubble:hover{
     --x: 100%;
