--- a/src/index.css
+++ b/src/index.css
@@ -83,4 +83,20 @@ body{
     transform: translateY(-35px);
 }
 
+.navigation ul li a .text {
+    position: absolute;
+    color: black;
+    font-weight: 400;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+.navigation ul li:hover a .text {
+    opacity: 1;
+    transform: translateY(10px);
+}
+
 
