--- a/src/index.css
+++ b/src/index.css
@@ -40,22 +40,26 @@ body{
 .navigation {
     background-color: #ffff;
     position: relative;
+    top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
     width: 100%;
+    height: 70px;
 }
 
 .navigation ul {
     display: flex;
+    width: 100%;
 }
 
 .navigation ul li {
     position: relative;
     list-style: none;
-    width: 100%;
-    height: 8vh;
+    width: 70px;
+    height: 70px;
+    z-index: 1;
 }
 
 .navigation ul li a {
@@ -72,15 +76,15 @@ body{
 .navigation ul li a .icon {
     position: relative;
     display: block;
-    line-height: 8vh;
-    font-size: 2em;
+    line-height: 75px;
+    font-size: 1.5em;
     text-align: center;
     transition: 0.5s;
     color: black;
 }
 
-.navigation ul li:hover a .icon {
-    transform: translateY(-35px);
+.navigation ul li.active a .icon {
+    transform: translateY(-32px);
 }
 
 .navigation ul li a .text {
@@ -94,9 +98,64 @@ body{
     transform: translateY(20px);
 }
 
-.navigation ul li:hover a .text {
+.navigation ul li.active a .text {
     opacity: 1;
     transform: translateY(10px);
+}
+
+.indicator {
+    position: absolute;
+    top: -50%;
+    width: 70px;
+    height: 70px;
+    background-color: #64c264;
+    border-radius: 50%;
+    border: 6px solid black;
+    transition: 0.5s;
+}
+
+.indicator::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -22px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-right-radius: 20px;
+    box-shadow: -1px -10px 0 0 black;
+}
+
+.indicator::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -22px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-left-radius: 20px;
+    box-shadow: -1px -10px 0 0 black;
+}
+
+.navigation ul li:nth-child(1).active ~ .indicator{
+    transform: translateX(calc(70px * 0));
+}
+
+.navigation ul li:nth-child(2).active ~ .indicator{
+    transform: translateX(calc(70px * 1));
+}
+
+.navigation ul li:nth-child(3).active ~ .indicator{
+    transform: translateX(calc(70px * 2));
+}
+
+.navigation ul li:nth-child(4).active ~ .indicator{
+    transform: translateX(calc(70px * 3));
+}
+
+.navigation ul li:nth-child(5).active ~ .indicator{
+    transform: translateX(calc(70px * 4));
 }
 
 
