--- a/src/index.css
+++ b/src/index.css
@@ -37,24 +37,32 @@ body{
     place-items: center;
 }
 
-.navigation {
+.header-container {
+    display: flex;
+    justify-content: right;
+    background-color: #ffff;
+    position: absolute;
+    width: 100%;
+    top: 3rem;
+}
+
+.navigation-container {
     background-color: #ffff;
     position: relative;
-    top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    width: 100%;
+    width: 30%;
     height: 70px;
 }
 
-.navigation ul {
+.navigation-container ul {
     display: flex;
     width: 100%;
 }
 
-.navigation ul li {
+.navigation-container ul li {
     position: relative;
     list-style: none;
     width: 70px;
@@ -62,7 +70,7 @@ body{
     z-index: 1;
 }
 
-.navigation ul li a {
+.navigation-container ul li a {
     position: relative;
     display: flex;
     justify-content: center;
@@ -73,7 +81,7 @@ body{
     font-weight: 500;
 }
 
-.navigation ul li a .icon {
+.navigation-container ul li a .icon {
     position: relative;
     display: block;
     line-height: 75px;
@@ -83,11 +91,11 @@ body{
     color: black;
 }
 
-.navigation ul li.active a .icon {
-    transform: translateY(-32px);
+.navigation-container ul li.active a .icon {
+    transform: translateY(-35px);
 }
 
-.navigation ul li a .text {
+.navigation-container ul li a .text {
     position: absolute;
     color: black;
     font-weight: 400;
@@ -98,19 +106,19 @@ body{
     transform: translateY(0px);
 }
 
-.navigation ul li.active a .text {
+.navigation-container ul li.active a .text {
     opacity: 1;
     transform: translateY(30px);
 }
 
 .indicator {
     position: absolute;
-    top: -50%;
+    top: -55%;
     width: 70px;
     height: 70px;
     background-color: #64c264;
     border-radius: 50%;
-    border: 6px solid black;
+    border: 6px solid #121212;
     transition: 0.5s;
 }
 
@@ -122,39 +130,39 @@ body{
     width: 20px;
     height: 20px;
     background: transparent;
-    border-top-right-radius: 20px;
-    box-shadow: -1px -10px 0 0 black;
+    border-top-right-radius: 30px;
+    box-shadow: 0px -10px 0 0 #121212;
 }
 
 .indicator::after {
     content: '';
     position: absolute;
     top: 50%;
-    left: -22px;
+    left: 60px;
     width: 20px;
     height: 20px;
     background: transparent;
     border-top-left-radius: 20px;
-    box-shadow: -1px -10px 0 0 black;
+    box-shadow: -1px -10px 0 0 #121212;
 }
 
-.navigation ul li:nth-child(1).active ~ .indicator{
+.navigation-container ul li:nth-child(1).active ~ .indicator{
     transform: translateX(calc(70px * 0));
 }
 
-.navigation ul li:nth-child(2).active ~ .indicator{
+.navigation-container ul li:nth-child(2).active ~ .indicator{
     transform: translateX(calc(70px * 1));
 }
 
-.navigation ul li:nth-child(3).active ~ .indicator{
+.navigation-container ul li:nth-child(3).active ~ .indicator{
     transform: translateX(calc(70px * 2));
 }
 
-.navigation ul li:nth-child(4).active ~ .indicator{
+.navigation-container ul li:nth-child(4).active ~ .indicator{
     transform: translateX(calc(70px * 3));
 }
 
-.navigation ul li:nth-child(5).active ~ .indicator{
+.navigation-container ul li:nth-child(5).active ~ .indicator{
     transform: translateX(calc(70px * 4));
 }
 
