implementation of header (Sondre & Herman)

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,12 @@ body{
     position: absolute;
     width: 100%;
     top: 3rem;
+    border-radius: 1rem;
+}
+
+.logo-container {
+    position: absolute;
+    left: 7%;
 }
 
 .navigation-container {
@@ -52,9 +58,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 1rem;
     width: 30%;
-    height: 70px;
+    height: 90px;
 }
 
 .navigation-container ul {
@@ -92,7 +98,7 @@ body{
 }
 
 .navigation-container ul li.active a .icon {
-    transform: translateY(-35px);
+    transform: translateY(-42px);
 }
 
 .navigation-container ul li a .text {
@@ -113,10 +119,10 @@ body{
 
 .indicator {
     position: absolute;
-    top: -55%;
+    top: -39%;
     width: 70px;
     height: 70px;
-    background-color: #64c264;
+    background: linear-gradient(90deg, rgba(238,174,202,1), rgba(148,187,233,1) 51%, rgba(238,174,202,1)) var(--x, 0)/ 200%;
     border-radius: 50%;
     border: 6px solid #121212;
     transition: 0.5s;
