--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -8,3 +8,13 @@
     align-items: center;
     justify-content: center;
 }
+
+.siteList a, .socialList a {
+    line-height: 2rem;
+    text-decoration: none;
+    color: gray;
+}
+
+.siteList a:hover, .socialList a:hover{
+    color: black;
+}
