--- a/src/components/BubbleChart.css
+++ b/src/components/BubbleChart.css
@@ -1,6 +1,6 @@
 #bubble-container{
-    width: 80vw;
-    height: 80vw;
+    width: 100%;
+    height: 100%;
     display: grid;
     place-items: center;
 }
